fixed whitespace at the end of the lines

--- a/css/default_theme.css
+++ b/css/default_theme.css
@@ -23,7 +23,7 @@ header {
 }
 .characteristic-bonus::after, .characteristic-value::after, .characteristic-deathsave::after, .characteristic-deathsave-checkbox::after
 {
-  box-shadow: 0px 0px 10px 0px rgba(66,66,66,0.75);
+  box-shadow: 0 0 10px 0 rgba(66,66,66,0.75);
 }
 .hp-color {
   background-color: #b5353b;
@@ -44,10 +44,10 @@ header {
   border-color: #b5353b;
 }
 .default-shadow {
-  box-shadow: 0px 0px 10px 0px rgba(66,66,66,0.75);
+  box-shadow: 0 0 10px 0 rgba(66,66,66,0.75);
 }
 .default-inner-shadow {
-  box-shadow: 0px 0px 10px 0px rgba(99,99,99,0.75);
+  box-shadow: 0 0 10px 0 rgba(99,99,99,0.75);
 }
 #new-item-dialog {
   box-shadow: 0 0 20px 2px black;
@@ -65,7 +65,7 @@ header {
 }
 #main-dice, .dice-in-list{
   background-color: #82262b;
-  box-shadow: 0px 0px 10px 0px rgba(66,66,66,0.75);
+  box-shadow: 0 0 10px 0 rgba(66,66,66,0.75);
   border-radius: 50%;
   padding: 0.6em;
   border: none;
